--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
   "engines": {
     "node": "0.6.x",
     "npm":  "1.0.x"
+  },
+  "dependencies": {
+    "connect-redis": "1.3.0",
+    "ejs": "0.7.1",
+    "everyauth": "0.2.32",
+    "express": "2.5.x",
+    "facebook-client": "1.6.0",
+    "redis": "0.7.2",
+    "seq": "0.3.5"
   }
 }
