--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "2.5.x",
     "facebook-client": "1.6.0",
     "redis": "0.7.2",
-    "seq": "0.3.5"
+    "seq": "0.3.5",
+    "redis-url": "0.1.0"
   }
 }
